--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
         <i>Beta Version</i>\n
         Creator: <u>Aleksei Vassimov</u>
     </string>
+    <string name="text_size_18">Text size 18</string>
 </resources>
